Fixed width issues, realigned header with body, removed images.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,8 +2,7 @@ body
 {
   margin: 0;
   padding: 0;
-  padding-top: 50px;    /* To avoid header covering top of body */
-  padding-bottom: 50px; /* To avoid footer covering bottom of body */
+  padding-bottom: 100px; /* To avoid footer covering bottom of body */
   height: 100%;
   color: $main;
   font-family: $font-style;
@@ -11,6 +10,7 @@ body
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   background: $background;
+  min-width: 500px;
 }
 .wrapper
 {
@@ -72,21 +72,24 @@ time
 
 aside
 {
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0;
+  padding-top: 50px;
   background: $background;
   width: 100%;
-  z-index: 2;
+  padding-left: 27px;
   /* box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1); */
   name
   {
+    display: inline-block;
     font-family: $name-style;
     font-size: 3em;
-    line-height: 2em;
+    line-height: 1em;
   }
   contacts
   {
+    display: inline-block; /* To force all contact icons to go on a new line when width too small */
     font-size: 1.8em;
     padding: 10px;
   }
